--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Job do Ano 2022</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -21,13 +21,13 @@
                 <a class="nav-link" href="#sobre">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Programação</a>
+                <a class="nav-link" href="#programacao">Programação</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Galeria</a>
+                <a class="nav-link" href="#galeria">Galeria</a>
               </li>
             </ul>
-            <a href="http://www.unoesc.edu.br" target="_blank">
+            <a href="https://fluxo.einscricao.app/?event_id=66011&apiUrl=https://www.e-inscricao.com/&msApiUrl=https://safe2pay-paymentflow.einscricao.workers.dev/&LOG=false&receiptUrl=https://recibo.e-inscricao.tech&apiParticipantsUrl=https://ei-bd-vercel.vercel.app" target="_blank">
                 <button class="btn btn-warning">Inscrições</button>
             </a>
           </div>
@@ -36,12 +36,11 @@
 
       <img src="img/banner.png" alt="Job do Ano" class="img-fluid">
 
-
       <div class="">
         <div class="container text-center">
             <div class="row">
               <div class="col">
-                <a href="http://www.unoesc.edu.br" target="_blank">
+                <a href="https://fluxo.einscricao.app/?event_id=66011&apiUrl=https://www.e-inscricao.com/&msApiUrl=https://safe2pay-paymentflow.einscricao.workers.dev/&LOG=false&receiptUrl=https://recibo.e-inscricao.tech&apiParticipantsUrl=https://ei-bd-vercel.vercel.app" target="_blank">
                     <button class="btn btn-warning btn-lg espacamento">Faça sua inscrição</button>
                 </a>
               </div>
@@ -62,7 +61,71 @@
           </div>
       </div>
 
+      <div id="programacao">
+        <div class="container text-center">
+            <div class="row">
+              <div class="col">
+                <h1>Programação</h1>
+                <br>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Data</th>
+                            <th>Horário</th>
+                            <th>Atividade</th>
+                            <th>Descrição</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>03/10</td>
+                            <td>19h00</td>
+                            <td>Abertura</td>
+                            <td>Descrição da abertura ...</td>
+                        </tr>
+                        <tr>
+                            <td>04/10</td>
+                            <td>19h00</td>
+                            <td>Talk</td>
+                            <td>Descrição da atividade ...</td>
+                        </tr>
+                    </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+      </div>
 
+      <div id="galeria">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <h1>Galeria</h1>
+                </div>
+            </div>
+            <div class="row espacamento-menor">
+                <div class="col-12 col-sm-4">
+                    <img src="img/galeria1.jpg" alt="Galeria 1" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-4">
+                    <img src="img/galeria2.jpg" alt="Galeria 2" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-4">
+                    <img src="img/galeria3.jpg" alt="Galeria 3" class="img-fluid">
+                </div>
+            </div>
+        </div>
+      </div>
+
+      <div id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    Rodapé do site
+                </div>
+            </div>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
